fix card ingredient spacing

--- a/src/styles/components/Navbar.sass
+++ b/src/styles/components/Navbar.sass
@@ -13,6 +13,9 @@
   width: 100% 
   padding-left: 280px
 
+  button 
+    margin-left: 20px
+
   .account-admin
     display: flex
     gap: 20px
