--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -75,6 +75,9 @@
   width: 100%;
   padding-left: 280px;
 }
+.navbar button {
+  margin-left: 20px;
+}
 .navbar .account-admin {
   display: flex;
   gap: 20px;
@@ -195,6 +198,7 @@ input::placeholder {
 .drink-card {
   background: #fff;
   width: 100%;
+  min-height: 400px;
   padding: 20px;
   border-radius: 10px;
   margin-bottom: 20px;
@@ -203,24 +207,35 @@ input::placeholder {
   -moz-box-shadow: 4px 4px 30px 0px rgba(255, 150, 91, 0.03);
   display: flex;
   gap: 20px;
+  align-items: stretch;
 }
 .drink-card h3 {
   font-size: 14px;
   margin-bottom: 12px;
 }
 .drink-card .drink-thumbnail {
-  height: 400px;
+  height: auto;
+  flex-grow: stre;
   width: 245px;
   border-radius: 10px;
   object-fit: cover;
 }
 .drink-card .drink-details {
   width: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
 }
 .drink-card .drink-title {
   font-size: 22px;
   font-weight: bold;
   margin-bottom: 2px;
+}
+.drink-card ul {
+  list-style: none;
+}
+.drink-card ul li {
+  margin-bottom: 10px;
 }
 .drink-card .drink-category {
   font-size: 14px;
